# meta-signal-message

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  rust-toolchain.toml
examples/: canonical.nota
schema/: lib.schema
src/: lib.rs
src/schema/: lib.rs
tests/: canonical_examples.rs  round_trip.rs
