[package]
name         = "meta-signal-message"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-message"
description  = "Meta signal contract for privileged message daemon configuration."
publish      = false
links        = "meta-signal-message"
build        = "build.rs"

[lib]
name = "meta_signal_message"
path = "src/lib.rs"

[[test]]
name = "canonical_examples"
path = "tests/canonical_examples.rs"
required-features = ["nota-text"]

[features]
default = []
nota-text = ["dep:nota-next", "signal-frame/nota-text", "signal-message/nota-text"]

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-message    = { git = "https://github.com/LiGoldragon/signal-message.git", branch = "main", default-features = false }
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
